[tool.poetry]
name = "sephrasto-rework"
version = "0.1.0"
description = "Trying to add some development best practices to the great serasto tool."
authors = ["Luis Dekant <dekant.luis@gmx.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
lxml = "^4.6.3"
PyQt5 = "^5.15.6"
PyYAML = "^6.0"
fdfgen = "^0.16.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.9.3"
pylint = "^2.11.1"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8-bugbear = "^21.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
